--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
   <!-- Image header -->
   <div class="w3-display-container w3-container">
-    <img src="https://lenovobeijing.sharepoint.com/:i:/r/sites/GlobalSalesLnD-InternalTeam/Shared%20Documents/Internal%20Team/Brand%20Assets/email%20banner%207.25inches%20Oct%2020.png?csf=1&web=1&e=xGvAUu" alt="Banner" style="width:100%">
+    <img src="https://t3.ftcdn.net/jpg/04/00/77/64/360_F_400776431_5JxdDYRr1mn9yISiUFMPcLtLp3zt6NA1.jpg" alt="Banner" style="width:100%">
     <div class="w3-display-topleft w3-text-white" style="padding:24px 48px">
       <p><a href="#" class="w3-button w3-black w3-padding-large w3-large">Explore Now</a></p>
     </div>
